--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Dongle&display=swap");
+/* COMMON */
+* {
+  font-family: "Dongle", sans-serif;
+}
+
+button {
+  background-color: white;
+  padding: 10px;
+  font-size: 2rem;
+  box-shadow: 2px 5px #999;
+}
+
+button:hover {
+  background-color: rgb(211, 211, 211);
+}
+
+button:active {
+  box-shadow: 0 1px #999;
+  transform: translateY(5px);
+}
+
+td {
+  border: 1px solid black;
+  width: 10vw;
+  height: 10vw;
+  font-size: 3rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* general-layout */
+.general-layout {
+  display: flex;
+  align-items: center;
+  height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.general-layout__body {
+  margin: 0 auto;
+  max-width: 620px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* welcome-box */
+.welcome-box {
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+/* make-bingo-box */
+.make-bingo-box {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.make-bingo-box .event-box {
+  width: 120%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 4rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.make-bingo-box .event-box span {
+  width: 130px;
+  text-align: center;
+}
+
+.make-bingo-box .event-box button {
+  padding: 0;
+  font-size: 3rem;
+  width: 5rem;
+}
+
+.make-bingo-box .make-button {
+  padding: 5px;
+  width: 120%;
+  margin-top: 10px;
+  background-color: rgb(228, 228, 228);
+}
+
+.make-bingo-box .make-button:hover {
+  background-color: rgb(208, 208, 208);
+}
+
+/* bingoBoard */
+.bingoBoard-box {
+  width: 100%;
+}
+
+.bingoBoard-box .event-box {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
 }
